[gd_scene load_steps=7 format=3 uid="uid://bv7oetmd34dsi"]

[ext_resource type="Script" uid="uid://dartty6i8fbkb" path="res://Scenes/main_menu.gd" id="1_ce3w2"]
[ext_resource type="AudioStream" uid="uid://wsq7fnul4lbq" path="res://Assets/Audio/Pufino - Rock Me Now (freetouse.com).mp3" id="2_ce3w2"]
[ext_resource type="VideoStream" uid="uid://f1sf502e1j0a" path="res://Assets/Videos/menu_bg.ogv" id="2_n45e2"]
[ext_resource type="FontFile" uid="uid://75i2xeboijlb" path="res://Assets/Fonts/Audiowide-Regular.ttf" id="3_n45e2"]
[ext_resource type="Texture2D" uid="uid://o34oglkp2i3c" path="res://Assets/Player/xerxes1.png" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://bjaa8sb267c3f" path="res://Assets/Environment/background.png" id="5_n45e2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ce3w2")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = -92.0
offset_top = -42.999996
offset_right = 1828.0
offset_bottom = 1037.0
scale = Vector2(0.7, 0.7)
stream = ExtResource("2_n45e2")
speed_scale = 4.0
autoplay = true
loop = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(808, 307.00003)
rotation = -0.72611374
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_opfnp")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ce3w2")
autoplay = true

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 83.0
offset_top = 462.0
offset_right = 206.0
offset_bottom = 587.0

[node name="PlayButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 24
text = "PLay"
alignment = 0

[node name="ControlsButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 24
text = "Controls"
alignment = 0

[node name="QuitButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 24
text = "Quit"
alignment = 0

[node name="ControlsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 204.0
offset_right = 344.0
offset_bottom = 244.0

[node name="Sprite2D" type="Sprite2D" parent="ControlsPanel"]
position = Vector2(309, 141)
scale = Vector2(0.35, 0.2)
texture = ExtResource("5_n45e2")

[node name="ControlsText" type="Label" parent="ControlsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 32
text = "MOVE        → WASD / Arrow Keys

SHOOT       → Space

PAUSE       → Esc"

[node name="BackButton" type="Button" parent="ControlsPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 277.0
offset_right = 101.0
offset_bottom = 316.0
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 24
text = "Back <"

[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ControlsPanel/BackButton" to="." method="_on_back_button_pressed"]
